Fix for vertical scrolling on mobiles + fix for horizontal scrolling on small screens

--- a/static/static_prod/css/styles.css
+++ b/static/static_prod/css/styles.css
@@ -1835,9 +1835,12 @@ h5.thumb-title {
   -webkit-border-radius: 0;
   border-radius: 0;
 }
-body {
-  overflow: hidden;
-}
+
+/*solution from comments from theme discussion */
+/*body {*/
+  /*overflow: hidden;*/
+/*}*/
+
 @media (min-width:992px) {
   body.boxed .global-wrap {
     width: 1230px;
